# lms6002

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cmdline.rs  device.rs  error.rs  interface.rs  main.rs
lms6002/: Cargo.toml
lms6002/src/: algo.rs  error.rs  lib.rs  lms6002.rs  reg.rs  regs.rs
src/: interface.rs  lms6002.rs  regs.rs
