[package]
name = "lms"
version = "0.1.1"
authors = ["Jay Kickliter <jay@kickliter.com>"]

[dependencies]
bitfield = "*"
env_logger = "0.5.12"
failure = "0.1.2"
failure_derive = "0.1.2"
lms6002 = { path = "../lms6002" }
log = "0.4.4"
spidev = { version = "0.3.0", optional = true }
structopt = "0.2.10"

[features]
spi = [ "spidev" ]
